--- a/styles/style.css
+++ b/styles/style.css
@@ -1,172 +1,1 @@
-* {
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    border: 0 none;
-    direction: rtl;
-    list-style-type: none;
-    box-sizing: border-box
-}
-
-html {
-    height: 100%;
-    min-height: 100%
-}
-
-html body {
-    background-color: #fff;
-    margin: 0;
-    font-family: vazirmatn
-}
-
-html body header {
-    width: 100%;
-    height: 141px;
-    overflow: hidden;
-    grid-row-end: auto;
-    position: relative;
-    text-align: center;
-    background: linear-gradient(60deg, rgb(4, 245, 245), rgba(51, 255, 0, 0.473));
-    color: #f5f5f5
-}
-
-html body header .topNav {
-    text-align: center;
-    width: 50%;
-    min-height: 100%;
-    vertical-align: middle;
-    display: table-cell
-}
-
-html body header .topNav .btn-1 {
-    background: #a188fc;
-    background: linear-gradient(to right, #a188fc 0%, #2eeade 50%, #a188fc 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#a188fc", endColorstr="#a188fc", GradientType=1);
-    background-size: 200%;
-    background-position: 100%;
-    color: #cff;
-    padding: 1em 3em;
-    border-radius: 2em;
-    display: inline-block;
-    box-shadow: 0 0 20px #299;
-    text-shadow: 0 0 5px #000;
-    transition: all .7s;
-    border: solid 1px #333
-}
-
-html body header .topNav .btn-1:hover {
-    background: #a188fc;
-    background: linear-gradient(to right, #a188fc 0%, #2eeade 50%, #a188fc 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#a188fc", endColorstr="#a188fc", GradientType=1);
-    background-size: 200%;
-    background-position: 0px;
-    box-shadow: 0 0 40px #5ff;
-    color: #cff;
-    text-shadow: 0 0 30px #000;
-    border: solid 1px #cff
-}
-
-html body header .waves {
-    position: relative;
-    width: 100%;
-    height: 15vh;
-    margin-bottom: -7px;
-    min-height: 100px;
-    max-height: 150px
-}
-
-html body header .parallax>use {
-    animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite
-}
-
-html body header .parallax>use:nth-child(1) {
-    animation-delay: -2s;
-    animation-duration: 7s
-}
-
-html body header .parallax>use:nth-child(2) {
-    animation-delay: -3s;
-    animation-duration: 10s
-}
-
-html body header .parallax>use:nth-child(3) {
-    animation-delay: -4s;
-    animation-duration: 13s
-}
-
-html body header .parallax>use:nth-child(4) {
-    animation-delay: -5s;
-    animation-duration: 20s
-}
-
-@keyframes move-forever {
-    0% {
-        transform: translate3d(-90px, 0, 0)
-    }
-
-    100% {
-        transform: translate3d(85px, 0, 0)
-    }
-}
-
-@media(max-width: 768px) {
-    html body header .waves {
-        height: 40px;
-        min-height: 40px
-    }
-
-    html body header .content {
-        height: 30vh
-    }
-
-    html body header h1 {
-        font-size: 240px
-    }
-}
-
-html body .book-side {
-    height: 100%;
-    overflow: hidden;
-    background: radial-gradient(#e4afa6, #9C8763);
-    perspective: 900px;
-    margin: 0
-}
-
-html body .book-side #flip {
-    animation: wrapper 6s ease-in-out infinte;
-    height: 350px;
-    width: 253px;
-    position: absolute;
-    left: 50%;
-    top: 30%;
-    transform: translateZ(-10px) rotateX(60deg) rotateZ(29deg) rotateY(0deg);
-    transform-style: preserve-3d;
-    transform-origin: 0 0 0
-}
-
-@keyframes wrapper {
-    50% {
-        transform: translateZ(-10px) rotateX(60deg) rotateZ(29deg) rotateY(-180deg)
-    }
-}
-
-/* html body div {
-    height: 350px;
-    width: 24px;
-    position: absolute;
-    left: calc(100% - 1px);
-    transform-origin: 0 100%;
-    transform-style: preserve-3d;
-    background-size: 253px 350px
-}
-
-html body #front,
-html body #front div {
-    background-image: url(http://blogs.slj.com/afuse8production/files/2012/06/Hobbit1.jpg);
-    box-shadow: inset rgba(255, 255, 255, .3) 0px -1px 0 0, #35582c 0px 1px 0px 0px
-}
-
-html body #front div>div>div>div>div>div>div>div>div>div>div,
-html body #front div div>div>div>div>div>div>div>div>div>div>div {
-    box-shadow: inset rgba(255, 255, 255, .3) 0px -1px 0 0, #35582c 0px 1px 0px 0px
-} */
+*{margin:0;padding:0;text-decoration:none;border:0 none;direction:rtl;list-style-type:none;box-sizing:border-box}html{height:100%;min-height:100%}html body{background-color:#fff;margin:0;font-family:vazirmatn}html body header{width:100%;height:141px;overflow:hidden;grid-row-end:auto;position:relative;text-align:center;background:linear-gradient(60deg, rgb(4, 245, 245), rgba(51, 255, 0, 0.473));color:#f5f5f5}html body header .topNav{text-align:center;width:50%;min-height:100%;vertical-align:middle;display:table-cell}html body header .topNav .btn-1{background:#a188fc;background:linear-gradient(to right, #a188fc 0%, #2eeade 50%, #a188fc 100%);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#a188fc", endColorstr="#a188fc", GradientType=1);background-size:200%;background-position:100%;color:#cff;padding:1em 3em;border-radius:2em;display:inline-block;box-shadow:0 0 20px #299;text-shadow:0 0 5px #000;transition:all .7s;border:solid 1px #333}html body header .topNav .btn-1:hover{background:#a188fc;background:linear-gradient(to right, #a188fc 0%, #2eeade 50%, #a188fc 100%);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#a188fc", endColorstr="#a188fc", GradientType=1);background-size:200%;background-position:0px;box-shadow:0 0 40px #5ff;color:#cff;text-shadow:0 0 30px #000;border:solid 1px #cff}html body header .waves{position:relative;width:100%;height:15vh;margin-bottom:-7px;min-height:100px;max-height:150px}html body header .parallax>use{animation:move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite}html body header .parallax>use:nth-child(1){animation-delay:-2s;animation-duration:7s}html body header .parallax>use:nth-child(2){animation-delay:-3s;animation-duration:10s}html body header .parallax>use:nth-child(3){animation-delay:-4s;animation-duration:13s}html body header .parallax>use:nth-child(4){animation-delay:-5s;animation-duration:20s}@keyframes move-forever{0%{transform:translate3d(-90px, 0, 0)}100%{transform:translate3d(85px, 0, 0)}}@media(max-width: 768px){html body header .waves{height:40px;min-height:40px}html body header .content{height:30vh}html body header h1{font-size:240px}}html body .book-side{height:100%;background:radial-gradient(#e4afa6, #9C8763);perspective:900px;margin:0}html body .book-side #flip{animation:wrapper 6s ease-in-out infinte;height:350px;width:253px;position:absolute;left:50%;top:30%;transform:translateZ(-10px) rotateX(60deg) rotateZ(29deg) rotateY(0deg);transform-style:preserve-3d;transform-origin:0 0 0}@keyframes wrapper{50%{transform:translateZ(-10px) rotateX(60deg) rotateZ(29deg) rotateY(-180deg)}}html body #flip div{height:350px;width:24px;position:absolute;left:calc(100% - 1px);transform-origin:0 100%;transform-style:preserve-3d;background-size:253px 350px}html body #flip #front,html body #flip #front div{background-image:url(http://blogs.slj.com/afuse8production/files/2012/06/Hobbit1.jpg);box-shadow:inset rgba(255,255,255,.3) 0px -1px 0 0,#35582c 0px 1px 0px 0px}html body #flip #front>div>div>div>div>div>div>div>div>div>div{box-shadow:inset rgba(255,255,255,.3) -1px -1px 0 0,#35582c 1px 1px 0px 0px}html #flip #back{transform:rotateY(0.4deg);transform-origin:-100% 0}html #flip #back,html #flip #back div{background-image:url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/164210/map1_.jpg)}html #flip>div{left:0;background-position-x:0}html #flip div>div{background-position-x:-23px;animation:page 6s ease-in-out infinite}html #flip div>div>div{background-position-x:-46px}html #flip div>div>div{background-position-x:-46px}html #flip div>div>div>div{background-position-x:-69px}html #flip div>div>div>div>div{background-position-x:-92px}html #flip div>div>div>div>div>div{background-position-x:-115px}html #flip div>div>div>div>div>div>div{background-position-x:-138px}html #flip div>div>div>div>div>div>div>div{background-position-x:-161px}html #flip div>div>div>div>div>div>div>div>div{background-position-x:-184px}html #flip div>div>div>div>div>div>div>div>div>div{background-position-x:-207px}html #flip div>div>div>div>div>div>div>div>div>div>div{background-position-x:-229px}@keyframes page{15%{transform:rotateY(-10deg)}50%{transform:rotateY(-2deg)}65%{transform:rotateY(10deg)}100%{transform:rotateY(0deg)}}html #book{width:248px;height:350px;position:absolute;left:50%;top:30%;transform:translate3d(0px, 0px, -10px) rotateX(60deg) rotateZ(29deg);transform-style:preserve-3d;transform-origin:0 0 0}@keyframes book{25%{box-shadow:inset rgba(0,0,0,.2) 0px 0 50px -140px}50%{box-shadow:inset rgba(0,0,0,.2) 0px 0 50px -140px}100%{box-shadow:inset rgba(0,0,0,.2) 510px 0 50px -140px}}html #book #top{animation:book 6s ease-in-out infinite;background:url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/164210/map2.jpg);background-size:100% 100%;background-position:100%;box-shadow:inset rgba(0,0,0,.2) 510px 0 50px -140px;height:350px;width:248px;position:absolute;left:0;top:0}html #book #bottom{background:#e7ded1;box-shadow:rgba(83,53,13,.2) 4px 2px 1px,#35582c 1px 1px 0px 0px;height:350px;width:253px;position:absolute;transform:translateZ(-40px);left:0;top:0}html #book #shadow{animation:shadow 6s ease-in-out infinite;box-shadow:inset rgba(83,53,13,0) -200px 0 150px -140px;height:350px;width:248px;position:absolute;left:-100%;top:0;transform:translateZ(-40px)}@keyframes shadow{20%{box-shadow:inset rgba(83,53,13,0) -200px 0 150px -140px}50%{box-shadow:inset rgba(83,53,13,.3) -350px 0 150px -140px}60%{box-shadow:inset rgba(83,53,13,0) -200px 0 150px -140px}}html #book #front{background:-webkit-linear-gradient(top, #fcf6ea, #d8d1c3);background-size:100% 2px;box-shadow:inset #c2bba2 3px 0 0px,#35582c -2px 1px 0px 0px;height:40px;width:251px;left:-3px;position:absolute;bottom:-40px;transform:rotateX(-90deg);transform-origin:50% 0;border-top-left-radius:5px;border-bottom-left-radius:5px}html #book #right{background:-webkit-linear-gradient(left, #ddd2bb, #bdb3a0);background-size:2px 100%;box-shadow:inset rgba(0,0,0,0) 0 0 0 20px;height:100%;width:40px;position:absolute;right:-40px;top:0;transform:rotateY(90deg);transform-origin:0 50%}html h4{position:absolute;bottom:20px;left:20px;margin:0;font-weight:200;opacity:1;font-family:sans-serif;color:rgba(0,0,0,.3)}html #bookmark{position:absolute;transform:translate3d(20px, 350px, -16px);transform-style:preserve-3d}html #bookmark div{background:#975858;box-shadow:#854d4d 1px 0;height:10px;width:20px;position:absolute;top:9px;transform:rotateX(-14deg);transform-origin:50% 0;transform-style:preserve-3d}html #bookmark>div>div{background:linear-gradient(to bottom, #975858, #bd7b7b, #975858)}html #bookmark>div>div>div{background:linear-gradient(to bottom, #975858, #854d4d)}html #bookmark>div>div>div>div{background:none;border-top:0px solid rgba(0,0,0,0);border-right:10px solid #854d4d;border-bottom:10px solid rgba(0,0,0,0);border-left:10px solid #854d4d;height:0;width:0}html #bookmark-shadow{background:linear-gradient(to bottom, rgba(83, 53, 13, 0.25), rgba(83, 53, 13, 0.11));height:15px;width:20px;position:absolute;transform:translate3d(12px, 350px, -25px) rotateX(-90deg) skewX(20deg);transform-origin:0 0}
