--- a/styles/style.scss
+++ b/styles/style.scss
@@ -11,21 +11,18 @@ html {
   body {
     @include impotant-vars.body;
 
-    /* my wave header */
+    /* my wave header use position just form lay out */
     header {
       @include impotant-vars.header;
+      // need to change with grid
       grid-row-end: auto;
       position: relative;
       text-align: center;
 
       background: linear-gradient(60deg, variable.$backgroundColor2, variable.$backgroundColor3);
       color: variable.$color1;
-      #header-container-grid{
-        display: grid;
-        gap: 100px
-      }
 
-      .header-buttons {
+      .button1 {
         text-align: center;
         width: 50%;
         min-height: 100%;
@@ -159,328 +156,11 @@ html {
         }
       }
     }
-    .book-side {
-      height: 100%;
-      // overflow: hidden;
-      background: radial-gradient(#e4afa6, #9C8763);
-      perspective: 900px;
-      margin: 0;
-    }
-
-    .book-side #flip {
-      animation: wrapper 6s ease-in-out infinte;
-      height: 350px;
-      width: 253px;
-      position: absolute;
-      left: 50%;
-      top: 30%;
-      transform: translateZ(-10px) rotateX(60deg) rotateZ(29deg) rotateY(0deg);
-      transform-style: preserve-3d;
-      transform-origin: 0 0 0;
-    }
-
-    @keyframes wrapper {
-      50% {
-        transform: translateZ(-10px) rotateX(60deg) rotateZ(29deg)rotateY(-180deg);
-      }
-    }
-
-    #flip div {
-      height: 350px;
-      width: 24px;
-      position: absolute;
-      left: calc(100% - 1px);
-      transform-origin: 0 100%;
-      transform-style: preserve-3d;
-      background-size: 253px 350px;
-    }
-
-    #flip #front,
-    #flip #front div {
-      background-image:
-        url(http://blogs.slj.com/afuse8production/files/2012/06/Hobbit1.jpg);
-      box-shadow: inset rgba(255, 255, 255, 0.3) 0px -1px 0 0, #35582c 0px 1px 0px 0px;
-    }
-
-    #flip #front>div>div>div>div>div>div>div>div>div>div {
-      box-shadow: inset rgba(255, 255, 255, 0.3) -1px -1px 0 0,
-        #35582c 1px 1px 0px 0px;
-    }
-  }
-
-  #flip #back {
-    transform: rotateY(0.4deg);
-    transform-origin: -100% 0;
-  }
-
-  #flip #back,
-  #flip #back div {
-    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/164210/map1_.jpg);
-  }
-
-  #flip>div {
-    left: 0;
-    background-position-x: 0;
-  }
-
-  #flip div>div {
-    background-position-x: -23px;
-    -webkit-animation: page 6s ease-in-out infinite;
-    animation: page 6s ease-in-out infinite;
-  }
-
-  #flip div>div>div {
-    background-position-x: -46px;
-  }
-
-  #flip div>div>div {
-    background-position-x: -46px;
-  }
-
-  #flip div>div>div>div {
-    background-position-x: -69px;
-  }
-
-  #flip div>div>div>div>div {
-    background-position-x: -92px;
-  }
-
-  #flip div>div>div>div>div>div {
-    background-position-x: -115px;
-  }
-
-  #flip div>div>div>div>div>div>div {
-    background-position-x: -138px;
-  }
-
-  #flip div>div>div>div>div>div>div>div {
-    background-position-x: -161px;
-  }
-
-  #flip div>div>div>div>div>div>div>div>div {
-    background-position-x: -184px;
-  }
-
-  #flip div>div>div>div>div>div>div>div>div>div {
-    background-position-x: -207px;
-  }
-
-  #flip div>div>div>div>div>div>div>div>div>div>div {
-    background-position-x: -229px;
-  }
-
-  @-webkit-keyframes page {
-    15% {
-      transform: rotateY(-10deg);
-    }
-
-    50% {
-      transform: rotateY(-2deg);
-    }
-
-    65% {
-      transform: rotateY(10deg);
-    }
-
-    100% {
-      transform: rotateY(0deg);
-    }
-  }
-
-  @keyframes page {
-    15% {
-      transform: rotateY(-10deg);
-    }
-
-    50% {
-      transform: rotateY(-2deg);
-    }
-
-    65% {
-      transform: rotateY(10deg);
-    }
-
-    100% {
-      transform: rotateY(0deg);
-    }
-  }
-
-  #book {
-    width: 248px;
-    height: 350px;
-    position: absolute;
-    left: 50%;
-    top: 30%;
-    transform: translate3d(0px, 0px, -10px) rotateX(60deg) rotateZ(29deg);
-    transform-style: preserve-3d;
-    transform-origin: 0 0 0;
-  }
-
-  @-webkit-keyframes book {
-    25% {
-      box-shadow: inset rgba(0, 0, 0, 0.2) 0px 0 50px -140px;
-    }
-
-    50% {
-      box-shadow: inset rgba(0, 0, 0, 0.2) 0px 0 50px -140px;
-    }
-
-    100% {
-      box-shadow: inset rgba(0, 0, 0, 0.2) 510px 0 50px -140px;
-    }
-  }
-
-  @keyframes book {
-    25% {
-      box-shadow: inset rgba(0, 0, 0, 0.2) 0px 0 50px -140px;
-    }
-
-    50% {
-      box-shadow: inset rgba(0, 0, 0, 0.2) 0px 0 50px -140px;
-    }
-
-    100% {
-      box-shadow: inset rgba(0, 0, 0, 0.2) 510px 0 50px -140px;
-    }
-  }
-  #book #top {
-    -webkit-animation: book 6s ease-in-out infinite;
-            animation: book 6s ease-in-out infinite;
-    background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/164210/map2.jpg);
-    background-size: 100% 100%;
-    background-position: 100%;
-    box-shadow: inset rgba(0, 0, 0, 0.2) 510px 0 50px -140px;
-    height: 350px;
-    width: 248px;
-    position: absolute;
-    left: 0;
-    top: 0;
-  }
-  
-  #book #bottom {
-    background: #e7ded1;
-    box-shadow: rgba(83, 53, 13, 0.2) 4px 2px 1px, #35582c 1px 1px 0px 0px;
-    height: 350px;
-    width: 253px;
-    position: absolute;
-    transform: translateZ(-40px);
-    left: 0;
-    top: 0;
-  }
-  #book #shadow {
-    -webkit-animation: shadow 6s ease-in-out infinite;
-            animation: shadow 6s ease-in-out infinite;
-    box-shadow: inset rgba(83, 53, 13, 0) -200px 0 150px -140px;
-    height: 350px;
-    width: 248px;
-    position: absolute;
-    left: -100%;
-    top: 0;
-    transform: translateZ(-40px);
-  }
-  // we del webkit
-  @keyframes shadow {
-    20% {
-      box-shadow: inset rgba(83, 53, 13, 0) -200px 0 150px -140px;
-    }
-    50% {
-      box-shadow: inset rgba(83, 53, 13, 0.3) -350px 0 150px -140px;
-    }
-    60% {
-      box-shadow: inset rgba(83, 53, 13, 0) -200px 0 150px -140px;
-    }
-  }
-  // @keyframes shadow {
-  //   20% {
-  //     box-shadow: inset rgba(83, 53, 13, 0) -200px 0 150px -140px;
-  //   }
-  //   50% {
-  //     box-shadow: inset rgba(83, 53, 13, 0.3) -350px 0 150px -140px;
-  //   }
-  //   60% {
-  //     box-shadow: inset rgba(83, 53, 13, 0) -200px 0 150px -140px;
-  //   }
-  // }
-  #book #front {
-    background: -webkit-linear-gradient(top, #fcf6ea, #d8d1c3);
-    background-size: 100% 2px;
-    box-shadow: inset #c2bba2 3px 0 0px, #35582c -2px 1px 0px 0px;
-    height: 40px;
-    width: 251px;
-    left: -3px;
-    position: absolute;
-    bottom: -40px;
-    transform: rotateX(-90deg);
-    transform-origin: 50% 0;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-  }
-  #book #right {
-    background: -webkit-linear-gradient(left, #ddd2bb, #bdb3a0);
-    background-size: 2px 100%;
-    box-shadow: inset rgba(0, 0, 0, 0) 0 0 0 20px;
-    height: 100%;
-    width: 40px;
-    position: absolute;
-    right: -40px;
-    top: 0;
-    transform: rotateY(90deg);
-    transform-origin: 0 50%;
-  }
-  h4 {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-    margin: 0;
-    font-weight: 200;
-    opacity: 1;
-    font-family: sans-serif;
-    color: rgba(0, 0, 0, 0.3);
-  }
-  
-  /* bookmark */
-  #bookmark {
-    position: absolute;
-    transform: translate3d(20px, 350px, -16px);
-    transform-style: preserve-3d;
-  }
-  
-  #bookmark div {
-    background: #975858;
-    box-shadow: #854d4d 1px 0;
-    height: 10px;
-    width: 20px;
-    position: absolute;
-    top: 9px;
-    transform: rotateX(-14deg);
-    transform-origin: 50% 0;
-    transform-style: preserve-3d;
-  }
-  
-  #bookmark > div > div {
-    background: linear-gradient(to bottom, #975858, #bd7b7b, #975858);
-  }
-  
-  #bookmark > div > div > div {
-    background: linear-gradient(to bottom, #975858, #854d4d);
-  }
-  
-  #bookmark > div > div > div > div {
-    background: none;
-    border-top: 0px solid transparent;
-    border-right: 10px solid #854d4d;
-    border-bottom: 10px solid transparent;
-    border-left: 10px solid #854d4d;
-    height: 0;
-    width: 0;
-  }
-  
-  #bookmark-shadow {
-    background: linear-gradient(to bottom, rgba(83, 53, 13, 0.25), rgba(83, 53, 13, 0.11));
-    height: 15px;
-    width: 20px;
-    position: absolute;
-    transform: translate3d(12px, 350px, -25px) rotateX(-90deg) skewX(20deg);
-    transform-origin: 0 0;
+    .grid-container{
+      display: grid;
+      gap: 20px;
+      // colunm num
+      grid-template-columns : auto;
+    }    
   }
 }
